--- a/css/main.css
+++ b/css/main.css
@@ -7,8 +7,11 @@
 :root {
     font-size: 100%;
     --mainColor: #10cab7;
-    --lightMainColor: rgba(24, 182, 166, 0.6);
+    --secondaryColor: #2c4755;
+    --lightMainColor: rgba(24, 182, 166, 0.3);
     --headerHight: 59.4px;
+    --sectionPadding: 4rem;
+    --sectionBg: #F6F6F6;
 }
 body {
     font-family: 'Cairo', sans-serif;
@@ -50,6 +53,37 @@ ul {
     .container {
         width: 1170px;
     }
+}
+.section-heading {
+    text-align: center;
+    margin-bottom: 4rem;
+}
+.section-heading h2 {
+    color: var(--lightMainColor);
+    font-size: 4rem;
+}
+.section-heading p {
+    color: #797979;
+    margin-top: -1.2rem;
+    font-weight: bold;
+    font-size: 1rem;
+    letter-spacing: .1rem;
+}
+@media (min-width:768px) {
+    .section-heading h2 {
+        font-size: 6rem;
+    }
+    .section-heading p {
+        margin-top: -1.6rem;
+        font-size: 1.2rem;
+    }
+}
+.with-padding {
+    padding-top: var(--sectionPadding);
+    padding-bottom: var(--sectionPadding);
+}
+.with-bg {
+    background-color: var(--sectionBg);
 }
 /* General Rules  End*/
 
@@ -260,29 +294,246 @@ header .container nav.show-menu {
 }
 /* Hero Section Styling End */
 
-/* Portfolio Section Styling Start */
-.portfolio {
-    background-color: #f6f6f6;
-    padding: 4rem 0%;
-}
-.portfolio .container {
+/* presentation Section Styling Start */
+.presentation .container {
     display: grid;
     grid-template-columns: repeat(auto-fit,minmax(250px,1fr));
     gap: 3rem;
 }
-.portfolio .container .box {
+.presentation .container .box {
     text-align: center;
 }
-.portfolio .container .box i {
+.presentation .container .box i {
     color: var(--mainColor);
     font-size: 3rem;
     margin-bottom: 1.5rem;
 }
-.portfolio .container .box h3 {
+.presentation .container .box h3 {
     margin-bottom: 1rem;
     font-size: 1.5rem;
 }
-.portfolio .container .box p {
+.presentation .container .box p {
     line-height: 2;
 }
+/* presentation Section Styling End */
+
+/* Services Section Styling Start */
+.services .container {
+    display: grid;
+    grid-template-columns: repeat(auto-fit,minmax(250px,1fr));
+    gap: 2rem;
+}
+.services .container .illustration {
+    display: none;
+}
+.services .container  .box {
+    text-align: center;
+}
+.services .container .box i {
+    color: var(--mainColor);
+    font-size: 3rem;
+    margin-bottom: 1rem;
+}
+.services .container .box h3 {
+    font-size: 1.3rem;
+    margin-bottom: 1rem;
+}
+.services .container  .box p {
+    line-height: 1.6;
+    color: #444;
+}
+@media (min-width: 768px) {
+    .services .container {
+        grid-template-columns: repeat(auto-fit,minmax(250px,1fr));
+        gap: 2rem 3rem;
+    }
+    .services .container .box {
+        text-align: left;
+        position: relative;
+        padding-left: 4rem;
+        
+    }
+    .services .container  .box i {
+        position: absolute;
+        left: 0%;
+        font-size: 2.5rem;
+    }
+}
+@media (min-width: 992px) {
+    .services .container {
+        grid-template-columns: repeat(3,1fr);
+        grid-template-rows: repeat(2,auto);
+        gap: 2rem 3rem;
+    }
+    .services .container .illustration {
+        grid-column: 3;
+        grid-row: 1/span 2;
+        display: block;
+        position: relative;
+        height: 100%;
+        width: fit-content;
+        margin-left: 2rem;
+    }
+    .services .container .illustration::before {
+        content: "";
+        position: absolute;
+        height: calc(100% + 100px);
+        width: 100px;
+        top: -50px;
+        right: -50px;
+        background-color: #2C4755;
+        z-index: -1;
+    }
+    .services .container .illustration img {
+        width: 250px;
+    }
+    
+}
+/* Services Section Styling End */
+
+/* Portfolio Section Styling Start */
+.portfolio .container {
+    display: grid;
+    grid-template-columns: repeat(auto-fit,minmax(300px,1fr));
+    gap: 2rem;
+}
+.portfolio .container .box {
+    background-color: white;
+}
+.portfolio .container .box img {
+    width: 100%;
+}
+.portfolio .container .box .content {
+    padding: 1rem;
+}
+.portfolio .container .box .content h3 {
+    margin-bottom: 1rem;
+}
+.portfolio .container .box .content p {
+    line-height: 1.6;
+    color: #777777;
+}
 /* Portfolio Section Styling End */
+
+/* About Section Styling Start */
+.about .container {
+    text-align: center;
+}
+.about .container .image {
+    margin-top: 3rem;
+    margin-bottom: 3rem;
+}
+.about .container .image img {
+    width: 250px;
+}
+.about .container .first-p {
+    font-weight: bold;
+    margin-bottom: 2rem;
+    line-height: 1.6;
+}
+.about .container hr {
+    width: 300px;
+    margin: 0 auto 2rem;
+    background-color: var(--mainColor);
+    height: 2px;
+    border: none;
+} 
+.about .container .second-p {
+    color: #777;
+    line-height: 1.6;
+}
+@media (min-width:768px) {
+    .about .container {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+    }
+    .about .container .image {
+        position: relative;
+        width: fit-content;
+        padding-left: 4rem;
+    }
+    .about .container .image::before {
+        content: "";
+        position: absolute;
+        height: calc(100% + 60px);
+        width: 100px;
+        top: -30px;
+        left: 40px;
+        background-color: #eee;
+        z-index: -1;
+    }
+    .about .container .image::after {
+        content: "";
+        position: absolute;
+        height: 80%;
+        width:100px;
+        top: -30px;
+        right: -130px;
+        border-left-style: solid;
+        border-bottom-style: solid;
+        border-left-width: 70px;
+        border-left-color:  var(--mainColor);
+        border-bottom-width: 80px;
+        border-bottom-color:  var(--mainColor);
+        z-index: -1;
+    }
+    .about .container .desc {
+        text-align: left;
+    }
+    .about .container .desc hr {
+        margin-inline: 0%;
+        margin: 0 0 4rem;
+    }
+    .about .container .first-p {
+        margin-bottom: 4rem;
+        line-height: 2;
+    }
+    .about .container .second-p {
+        line-height: 2;
+    }
+}
+/* About Section Styling End */
+
+/* Contact Section Styling Start */
+.contact .container {
+    text-align: center;
+}
+.contact .container p {
+    font-size: 1.5rem;
+    font-weight: bold;
+    margin-bottom: .5rem;
+}
+.contact .container p:first-of-type {
+    color: var(--secondaryColor);
+    
+}
+.contact .container p:nth-of-type(2) {
+    color: var(--mainColor);
+    
+}
+.contact .container .social i {
+    margin-inline: .2rem;
+}
+@media (min-width:768px) {
+    .contact .container p {
+        font-size: 2rem;
+    }
+}
+/* Contact Section Styling End */
+
+/* Footer Styling Start */
+footer {
+    background-color: var(--secondaryColor);
+    padding: 2rem;
+    text-align: center;
+    color: white;
+}
+footer p {
+    font-size: 1.2rem;
+    letter-spacing: .1rem;
+}
+footer p span  {
+    color: var(--mainColor);
+
+}
+/* Footer Styling End */
