--- a/css/main.css
+++ b/css/main.css
@@ -4,6 +4,9 @@
     padding: 0%;
     box-sizing: border-box;
 }
+html {
+    scroll-behavior: smooth;
+}
 :root {
     font-size: 100%;
     --mainColor: #10cab7;
